# lockfree-queues

./: .clang-format  .clang-tidy  .cmake-format.json  .editorconfig  .gitignore  CMakeLists.txt  COPYING  README.md  vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
bench/: Barrier.h  CMakeLists.txt  bench.cpp  waitevent.cpp  waitevent.h
cmake/: PackableLibrary.cmake
include/lockfree-queue/: backoff.h  mpmc.h  mpsc.h  mpsc_pc.h  spsc.h
include/lockfree-queue/detail/: defs.h  ringbuf.h  scopeexit.h
src/: CMakeLists.txt  Dependencies.cmake  bench.cpp  cqueue.hpp  mpmc_bench.cpp  mpmc_queue.hpp  mpsc_bench.cpp  mpsc_pc.cpp  mpsc_queue.hpp  mpsc_shmem_queue.hpp  rseq.cpp  rseq.h
src/cqueue/: CMakeLists.txt  cqueue.h  mpmc.c  mpsc.c
src/cqueue/backoff/: CMakeLists.txt  backoff.c  backoff.h
src/cqueue/wait_event/: CMakeLists.txt  wait_event.c  wait_event.h
test/: CMakeLists.txt  lockfree-queue-test.cpp  string-gen.h
test/src/: cqueue_test.cpp
